--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>MIT-RA: MIT Resource Assistant</title>
   </head>
   <body>
-    <div id="root"></div>
+  <body>
+  <!-- Watson will use this -->
+  <div id="mitra-chat-container"></div>
+
+  <!-- React mounts here -->
+  <div id="root"></div>
+
+  </body>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
